# buglens

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: openclaw-skill-migration.md  remote-sync.md  skill-distribution.md
scripts/: devbox-run.sh  rsync-devbox-tracked.sh  rsync-devbox.sh
skills/arms-rum-diagnosis/: SKILL.md
skills/buglens/: SKILL.md
skills/gitlab-frontend/: SKILL.md
src/buglens/: __init__.py  agent.py  cli.py  config.py  mcp_server.py  models.py  rpc.py  skills.py
src/buglens/examples/: arms.py  arms_err_stack.py  arms_exception_stack_tool.py  arms_mcp_tools.py  arms_openapi.py  arms_openapi_rum.py  arms_openapi_stack.py
src/buglens/integrations/: __init__.py  arms.py  gitlab.py
src/buglens/monitoring/: __init__.py  query_builder.py
src/buglens/monitoring/adapters/: __init__.py  arms_client.py  sls_client.py
src/buglens/monitoring/schemas/: __init__.py  common.py
src/buglens/monitoring/services/: __init__.py  atomic_monitoring.py
src/buglens/skill_templates/buglens/agents/: openai.yaml
tests/: test_agent_runner.py  test_cli_e2e.py  test_cli_invoke.py  test_cli_repl.py  test_config.py  test_env_bootstrap.py  test_gitlab_integration.py  test_integrations_helpers.py  test_langgraph_mcp.py  test_mcp_server_cli.py  test_monitoring_arms_client.py  test_monitoring_query_builder.py  test_monitoring_schemas.py  test_monitoring_service.py  test_monitoring_sls_client.py  test_rpc.py  test_skill_export_cli.py  test_skill_package.py  test_skill_release_cli.py
