[project]
name = "buglens"
version = "0.1.0"
description = "LangGraph sub-agent runtime for OpenClaw-compatible integrations"
readme = "README.md"
authors = [
    { name = "丁文江", email = "dingwenjiang@bytedance.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-arms20190808==10.0.6",
    "alibabacloud-openapi-util>=0.2.4",
    "aliyun-python-sdk-core>=2.16.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.60",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.32.5",
]

[project.scripts]
buglens = "buglens.cli:main"
buglens-mcp = "buglens.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buglens"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
